[package]
name = "qs-mic"
version = "0.1.0"
edition = "2021"
authors = ["Ege BALIC <egebalci@pm.me>"]
description = "Qsocket microphone utility."
repository = "https://github.com/qsocket/qs-mic"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cpal = "0.13.5"
clap = "3.2.16"
hound = "3.4.0"
colored = "2.0.0"
rand = "0.8.5"
tempfile = "3.3.0"
md5 = "0.7.0"
uuid = "1.1.2"
opener = "0.5.0"
anyhow = "1.0.63"
qsocket = "*"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"